--- a/main.kv
+++ b/main.kv
@@ -17,7 +17,7 @@
                 spacing: 10
 
                 Label:
-                    text: 'Buffer Capacity App'
+                    text: 'Buffer Capacity'
                     font_size: '40sp'
                     color: 0.1, 0.1, 0.1, 1  # Modern black color
                     size_hint_y: None
